arch/netder_instantiation/parser.out
Created by PLY version 3.4 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> formula
Rule 1     formula -> atomicFormula
Rule 2     formula -> LBRACKET formula RBRACKET
Rule 3     formula -> formula IFF formula
Rule 4     formula -> formula IMPLIES formula
Rule 5     formula -> formula OR formula
Rule 6     formula -> formula AND formula
Rule 7     formula -> NOT formula
Rule 8     quantifierList -> quantifierList COMMA IDENTIFIER
Rule 9     quantifierList -> IDENTIFIER
Rule 10    formula -> FORALL quantifierList LBRACKET formula RBRACKET
Rule 11    formula -> THEREEXISTS quantifierList LBRACKET formula RBRACKET
Rule 12    atomicFormula -> IDENTIFIER LBRACKET termList RBRACKET
Rule 13    atomicFormula -> expression EQ expression
Rule 14    atomicFormula -> expression EQ term
Rule 15    atomicFormula -> term EQ expression
Rule 16    atomicFormula -> term EQ term
Rule 17    expression -> expression PLUS term
Rule 18    expression -> term PLUS term
Rule 19    atomicFormula -> expression LT expression
Rule 20    atomicFormula -> expression LT term
Rule 21    atomicFormula -> term LT expression
Rule 22    atomicFormula -> term LT term
Rule 23    atomicFormula -> expression LTE expression
Rule 24    atomicFormula -> expression LTE term
Rule 25    atomicFormula -> term LTE expression
Rule 26    atomicFormula -> term LTE term
Rule 27    atomicFormula -> expression GT expression
Rule 28    atomicFormula -> expression GT term
Rule 29    atomicFormula -> term GT expression
Rule 30    atomicFormula -> term GT term
Rule 31    atomicFormula -> expression GTE expression
Rule 32    atomicFormula -> expression GTE term
Rule 33    atomicFormula -> term GTE expression
Rule 34    atomicFormula -> term GTE term
Rule 35    atomicFormula -> expression NEQ expression
Rule 36    atomicFormula -> expression NEQ term
Rule 37    atomicFormula -> term NEQ expression
Rule 38    atomicFormula -> term NEQ term
Rule 39    termList -> termList COMMA term
Rule 40    termList -> term
Rule 41    term -> CONSTANT
Rule 42    term -> IDENTIFIER
Rule 43    term -> STRINGLIT
Rule 44    term -> TRUE
Rule 45    term -> FALSE

Terminals, with rules where they appear

AND                  : 6
COMMA                : 8 39
CONSTANT             : 41
EQ                   : 13 14 15 16
FALSE                : 45
FORALL               : 10
GT                   : 27 28 29 30
GTE                  : 31 32 33 34
IDENTIFIER           : 8 9 12 42
IFF                  : 3
IMPLIES              : 4
LBRACKET             : 2 10 11 12
LT                   : 19 20 21 22
LTE                  : 23 24 25 26
NEQ                  : 35 36 37 38
NOT                  : 7
OR                   : 5
PLUS                 : 17 18
RBRACKET             : 2 10 11 12
STRINGLIT            : 43
THEREEXISTS          : 11
TRUE                 : 44
error                : 

Nonterminals, with rules where they appear

atomicFormula        : 1
expression           : 13 13 14 15 17 19 19 20 21 23 23 24 25 27 27 28 29 31 31 32 33 35 35 36 37
formula              : 2 3 3 4 4 5 5 6 6 7 10 11 0
quantifierList       : 8 10 11
term                 : 14 15 16 16 17 18 18 20 21 22 22 24 25 26 26 28 29 30 30 32 33 34 34 36 37 38 38 39 40
termList             : 12 39

Parsing method: LALR

state 0

    (0) S' -> . formula
    (1) formula -> . atomicFormula
    (2) formula -> . LBRACKET formula RBRACKET
    (3) formula -> . formula IFF formula
    (4) formula -> . formula IMPLIES formula
    (5) formula -> . formula OR formula
    (6) formula -> . formula AND formula
    (7) formula -> . NOT formula
    (10) formula -> . FORALL quantifierList LBRACKET formula RBRACKET
    (11) formula -> . THEREEXISTS quantifierList LBRACKET formula RBRACKET
    (12) atomicFormula -> . IDENTIFIER LBRACKET termList RBRACKET
    (13) atomicFormula -> . expression EQ expression
    (14) atomicFormula -> . expression EQ term
    (15) atomicFormula -> . term EQ expression
    (16) atomicFormula -> . term EQ term
    (19) atomicFormula -> . expression LT expression
    (20) atomicFormula -> . expression LT term
    (21) atomicFormula -> . term LT expression
    (22) atomicFormula -> . term LT term
    (23) atomicFormula -> . expression LTE expression
    (24) atomicFormula -> . expression LTE term
    (25) atomicFormula -> . term LTE expression
    (26) atomicFormula -> . term LTE term
    (27) atomicFormula -> . expression GT expression
    (28) atomicFormula -> . expression GT term
    (29) atomicFormula -> . term GT expression
    (30) atomicFormula -> . term GT term
    (31) atomicFormula -> . expression GTE expression
    (32) atomicFormula -> . expression GTE term
    (33) atomicFormula -> . term GTE expression
    (34) atomicFormula -> . term GTE term
    (35) atomicFormula -> . expression NEQ expression
    (36) atomicFormula -> . expression NEQ term
    (37) atomicFormula -> . term NEQ expression
    (38) atomicFormula -> . term NEQ term
    (17) expression -> . expression PLUS term
    (18) expression -> . term PLUS term
    (41) term -> . CONSTANT
    (42) term -> . IDENTIFIER
    (43) term -> . STRINGLIT
    (44) term -> . TRUE
    (45) term -> . FALSE

    LBRACKET        shift and go to state 3
    NOT             shift and go to state 4
    FORALL          shift and go to state 5
    THEREEXISTS     shift and go to state 6
    IDENTIFIER      shift and go to state 7
    CONSTANT        shift and go to state 10
    STRINGLIT       shift and go to state 11
    TRUE            shift and go to state 12
    FALSE           shift and go to state 13

    formula                        shift and go to state 1
    atomicFormula                  shift and go to state 2
    expression                     shift and go to state 8
    term                           shift and go to state 9

state 1

    (0) S' -> formula .
    (3) formula -> formula . IFF formula
    (4) formula -> formula . IMPLIES formula
    (5) formula -> formula . OR formula
    (6) formula -> formula . AND formula

    IFF             shift and go to state 14
    IMPLIES         shift and go to state 15
    OR              shift and go to state 16
    AND             shift and go to state 17


state 2

    (1) formula -> atomicFormula .

    IFF             reduce using rule 1 (formula -> atomicFormula .)
    IMPLIES         reduce using rule 1 (formula -> atomicFormula .)
    OR              reduce using rule 1 (formula -> atomicFormula .)
    AND             reduce using rule 1 (formula -> atomicFormula .)
    $end            reduce using rule 1 (formula -> atomicFormula .)
    RBRACKET        reduce using rule 1 (formula -> atomicFormula .)


state 3

    (2) formula -> LBRACKET . formula RBRACKET
    (1) formula -> . atomicFormula
    (2) formula -> . LBRACKET formula RBRACKET
    (3) formula -> . formula IFF formula
    (4) formula -> . formula IMPLIES formula
    (5) formula -> . formula OR formula
    (6) formula -> . formula AND formula
    (7) formula -> . NOT formula
    (10) formula -> . FORALL quantifierList LBRACKET formula RBRACKET
    (11) formula -> . THEREEXISTS quantifierList LBRACKET formula RBRACKET
    (12) atomicFormula -> . IDENTIFIER LBRACKET termList RBRACKET
    (13) atomicFormula -> . expression EQ expression
    (14) atomicFormula -> . expression EQ term
    (15) atomicFormula -> . term EQ expression
    (16) atomicFormula -> . term EQ term
    (19) atomicFormula -> . expression LT expression
    (20) atomicFormula -> . expression LT term
    (21) atomicFormula -> . term LT expression
    (22) atomicFormula -> . term LT term
    (23) atomicFormula -> . expression LTE expression
    (24) atomicFormula -> . expression LTE term
    (25) atomicFormula -> . term LTE expression
    (26) atomicFormula -> . term LTE term
    (27) atomicFormula -> . expression GT expression
    (28) atomicFormula -> . expression GT term
    (29) atomicFormula -> . term GT expression
    (30) atomicFormula -> . term GT term
    (31) atomicFormula -> . expression GTE expression
    (32) atomicFormula -> . expression GTE term
    (33) atomicFormula -> . term GTE expression
    (34) atomicFormula -> . term GTE term
    (35) atomicFormula -> . expression NEQ expression
    (36) atomicFormula -> . expression NEQ term
    (37) atomicFormula -> . term NEQ expression
    (38) atomicFormula -> . term NEQ term
    (17) expression -> . expression PLUS term
    (18) expression -> . term PLUS term
    (41) term -> . CONSTANT
    (42) term -> . IDENTIFIER
    (43) term -> . STRINGLIT
    (44) term -> . TRUE
    (45) term -> . FALSE

    LBRACKET        shift and go to state 3
    NOT             shift and go to state 4
    FORALL          shift and go to state 5
    THEREEXISTS     shift and go to state 6
    IDENTIFIER      shift and go to state 7
    CONSTANT        shift and go to state 10
    STRINGLIT       shift and go to state 11
    TRUE            shift and go to state 12
    FALSE           shift and go to state 13

    formula                        shift and go to state 18
    atomicFormula                  shift and go to state 2
    expression                     shift and go to state 8
    term                           shift and go to state 9

state 4

    (7) formula -> NOT . formula
    (1) formula -> . atomicFormula
    (2) formula -> . LBRACKET formula RBRACKET
    (3) formula -> . formula IFF formula
    (4) formula -> . formula IMPLIES formula
    (5) formula -> . formula OR formula
    (6) formula -> . formula AND formula
    (7) formula -> . NOT formula
    (10) formula -> . FORALL quantifierList LBRACKET formula RBRACKET
    (11) formula -> . THEREEXISTS quantifierList LBRACKET formula RBRACKET
    (12) atomicFormula -> . IDENTIFIER LBRACKET termList RBRACKET
    (13) atomicFormula -> . expression EQ expression
    (14) atomicFormula -> . expression EQ term
    (15) atomicFormula -> . term EQ expression
    (16) atomicFormula -> . term EQ term
    (19) atomicFormula -> . expression LT expression
    (20) atomicFormula -> . expression LT term
    (21) atomicFormula -> . term LT expression
    (22) atomicFormula -> . term LT term
    (23) atomicFormula -> . expression LTE expression
    (24) atomicFormula -> . expression LTE term
    (25) atomicFormula -> . term LTE expression
    (26) atomicFormula -> . term LTE term
    (27) atomicFormula -> . expression GT expression
    (28) atomicFormula -> . expression GT term
    (29) atomicFormula -> . term GT expression
    (30) atomicFormula -> . term GT term
    (31) atomicFormula -> . expression GTE expression
    (32) atomicFormula -> . expression GTE term
    (33) atomicFormula -> . term GTE expression
    (34) atomicFormula -> . term GTE term
    (35) atomicFormula -> . expression NEQ expression
    (36) atomicFormula -> . expression NEQ term
    (37) atomicFormula -> . term NEQ expression
    (38) atomicFormula -> . term NEQ term
    (17) expression -> . expression PLUS term
    (18) expression -> . term PLUS term
    (41) term -> . CONSTANT
    (42) term -> . IDENTIFIER
    (43) term -> . STRINGLIT
    (44) term -> . TRUE
    (45) term -> . FALSE

    LBRACKET        shift and go to state 3
    NOT             shift and go to state 4
    FORALL          shift and go to state 5
    THEREEXISTS     shift and go to state 6
    IDENTIFIER      shift and go to state 7
    CONSTANT        shift and go to state 10
    STRINGLIT       shift and go to state 11
    TRUE            shift and go to state 12
    FALSE           shift and go to state 13

    formula                        shift and go to state 19
    atomicFormula                  shift and go to state 2
    expression                     shift and go to state 8
    term                           shift and go to state 9

state 5

    (10) formula -> FORALL . quantifierList LBRACKET formula RBRACKET
    (8) quantifierList -> . quantifierList COMMA IDENTIFIER
    (9) quantifierList -> . IDENTIFIER

    IDENTIFIER      shift and go to state 21

    quantifierList                 shift and go to state 20

state 6

    (11) formula -> THEREEXISTS . quantifierList LBRACKET formula RBRACKET
    (8) quantifierList -> . quantifierList COMMA IDENTIFIER
    (9) quantifierList -> . IDENTIFIER

    IDENTIFIER      shift and go to state 21

    quantifierList                 shift and go to state 22

state 7

    (12) atomicFormula -> IDENTIFIER . LBRACKET termList RBRACKET
    (42) term -> IDENTIFIER .

    LBRACKET        shift and go to state 23
    EQ              reduce using rule 42 (term -> IDENTIFIER .)
    LT              reduce using rule 42 (term -> IDENTIFIER .)
    LTE             reduce using rule 42 (term -> IDENTIFIER .)
    GT              reduce using rule 42 (term -> IDENTIFIER .)
    GTE             reduce using rule 42 (term -> IDENTIFIER .)
    NEQ             reduce using rule 42 (term -> IDENTIFIER .)
    PLUS            reduce using rule 42 (term -> IDENTIFIER .)


state 8

    (13) atomicFormula -> expression . EQ expression
    (14) atomicFormula -> expression . EQ term
    (19) atomicFormula -> expression . LT expression
    (20) atomicFormula -> expression . LT term
    (23) atomicFormula -> expression . LTE expression
    (24) atomicFormula -> expression . LTE term
    (27) atomicFormula -> expression . GT expression
    (28) atomicFormula -> expression . GT term
    (31) atomicFormula -> expression . GTE expression
    (32) atomicFormula -> expression . GTE term
    (35) atomicFormula -> expression . NEQ expression
    (36) atomicFormula -> expression . NEQ term
    (17) expression -> expression . PLUS term

    EQ              shift and go to state 24
    LT              shift and go to state 25
    LTE             shift and go to state 26
    GT              shift and go to state 27
    GTE             shift and go to state 28
    NEQ             shift and go to state 29
    PLUS            shift and go to state 30


state 9

    (15) atomicFormula -> term . EQ expression
    (16) atomicFormula -> term . EQ term
    (21) atomicFormula -> term . LT expression
    (22) atomicFormula -> term . LT term
    (25) atomicFormula -> term . LTE expression
    (26) atomicFormula -> term . LTE term
    (29) atomicFormula -> term . GT expression
    (30) atomicFormula -> term . GT term
    (33) atomicFormula -> term . GTE expression
    (34) atomicFormula -> term . GTE term
    (37) atomicFormula -> term . NEQ expression
    (38) atomicFormula -> term . NEQ term
    (18) expression -> term . PLUS term

    EQ              shift and go to state 31
    LT              shift and go to state 32
    LTE             shift and go to state 33
    GT              shift and go to state 34
    GTE             shift and go to state 35
    NEQ             shift and go to state 36
    PLUS            shift and go to state 37


state 10

    (41) term -> CONSTANT .

    EQ              reduce using rule 41 (term -> CONSTANT .)
    LT              reduce using rule 41 (term -> CONSTANT .)
    LTE             reduce using rule 41 (term -> CONSTANT .)
    GT              reduce using rule 41 (term -> CONSTANT .)
    GTE             reduce using rule 41 (term -> CONSTANT .)
    NEQ             reduce using rule 41 (term -> CONSTANT .)
    PLUS            reduce using rule 41 (term -> CONSTANT .)
    RBRACKET        reduce using rule 41 (term -> CONSTANT .)
    COMMA           reduce using rule 41 (term -> CONSTANT .)
    IFF             reduce using rule 41 (term -> CONSTANT .)
    IMPLIES         reduce using rule 41 (term -> CONSTANT .)
    OR              reduce using rule 41 (term -> CONSTANT .)
    AND             reduce using rule 41 (term -> CONSTANT .)
    $end            reduce using rule 41 (term -> CONSTANT .)


state 11

    (43) term -> STRINGLIT .

    EQ              reduce using rule 43 (term -> STRINGLIT .)
    LT              reduce using rule 43 (term -> STRINGLIT .)
    LTE             reduce using rule 43 (term -> STRINGLIT .)
    GT              reduce using rule 43 (term -> STRINGLIT .)
    GTE             reduce using rule 43 (term -> STRINGLIT .)
    NEQ             reduce using rule 43 (term -> STRINGLIT .)
    PLUS            reduce using rule 43 (term -> STRINGLIT .)
    RBRACKET        reduce using rule 43 (term -> STRINGLIT .)
    COMMA           reduce using rule 43 (term -> STRINGLIT .)
    IFF             reduce using rule 43 (term -> STRINGLIT .)
    IMPLIES         reduce using rule 43 (term -> STRINGLIT .)
    OR              reduce using rule 43 (term -> STRINGLIT .)
    AND             reduce using rule 43 (term -> STRINGLIT .)
    $end            reduce using rule 43 (term -> STRINGLIT .)


state 12

    (44) term -> TRUE .

    EQ              reduce using rule 44 (term -> TRUE .)
    LT              reduce using rule 44 (term -> TRUE .)
    LTE             reduce using rule 44 (term -> TRUE .)
    GT              reduce using rule 44 (term -> TRUE .)
    GTE             reduce using rule 44 (term -> TRUE .)
    NEQ             reduce using rule 44 (term -> TRUE .)
    PLUS            reduce using rule 44 (term -> TRUE .)
    RBRACKET        reduce using rule 44 (term -> TRUE .)
    COMMA           reduce using rule 44 (term -> TRUE .)
    IFF             reduce using rule 44 (term -> TRUE .)
    IMPLIES         reduce using rule 44 (term -> TRUE .)
    OR              reduce using rule 44 (term -> TRUE .)
    AND             reduce using rule 44 (term -> TRUE .)
    $end            reduce using rule 44 (term -> TRUE .)


state 13

    (45) term -> FALSE .

    EQ              reduce using rule 45 (term -> FALSE .)
    LT              reduce using rule 45 (term -> FALSE .)
    LTE             reduce using rule 45 (term -> FALSE .)
    GT              reduce using rule 45 (term -> FALSE .)
    GTE             reduce using rule 45 (term -> FALSE .)
    NEQ             reduce using rule 45 (term -> FALSE .)
    PLUS            reduce using rule 45 (term -> FALSE .)
    RBRACKET        reduce using rule 45 (term -> FALSE .)
    COMMA           reduce using rule 45 (term -> FALSE .)
    IFF             reduce using rule 45 (term -> FALSE .)
    IMPLIES         reduce using rule 45 (term -> FALSE .)
    OR              reduce using rule 45 (term -> FALSE .)
    AND             reduce using rule 45 (term -> FALSE .)
    $end            reduce using rule 45 (term -> FALSE .)


state 14

    (3) formula -> formula IFF . formula
    (1) formula -> . atomicFormula
    (2) formula -> . LBRACKET formula RBRACKET
    (3) formula -> . formula IFF formula
    (4) formula -> . formula IMPLIES formula
    (5) formula -> . formula OR formula
    (6) formula -> . formula AND formula
    (7) formula -> . NOT formula
    (10) formula -> . FORALL quantifierList LBRACKET formula RBRACKET
    (11) formula -> . THEREEXISTS quantifierList LBRACKET formula RBRACKET
    (12) atomicFormula -> . IDENTIFIER LBRACKET termList RBRACKET
    (13) atomicFormula -> . expression EQ expression
    (14) atomicFormula -> . expression EQ term
    (15) atomicFormula -> . term EQ expression
    (16) atomicFormula -> . term EQ term
    (19) atomicFormula -> . expression LT expression
    (20) atomicFormula -> . expression LT term
    (21) atomicFormula -> . term LT expression
    (22) atomicFormula -> . term LT term
    (23) atomicFormula -> . expression LTE expression
    (24) atomicFormula -> . expression LTE term
    (25) atomicFormula -> . term LTE expression
    (26) atomicFormula -> . term LTE term
    (27) atomicFormula -> . expression GT expression
    (28) atomicFormula -> . expression GT term
    (29) atomicFormula -> . term GT expression
    (30) atomicFormula -> . term GT term
    (31) atomicFormula -> . expression GTE expression
    (32) atomicFormula -> . expression GTE term
    (33) atomicFormula -> . term GTE expression
    (34) atomicFormula -> . term GTE term
    (35) atomicFormula -> . expression NEQ expression
    (36) atomicFormula -> . expression NEQ term
    (37) atomicFormula -> . term NEQ expression
    (38) atomicFormula -> . term NEQ term
    (17) expression -> . expression PLUS term
    (18) expression -> . term PLUS term
    (41) term -> . CONSTANT
    (42) term -> . IDENTIFIER
    (43) term -> . STRINGLIT
    (44) term -> . TRUE
    (45) term -> . FALSE

    LBRACKET        shift and go to state 3
    NOT             shift and go to state 4
    FORALL          shift and go to state 5
    THEREEXISTS     shift and go to state 6
    IDENTIFIER      shift and go to state 7
    CONSTANT        shift and go to state 10
    STRINGLIT       shift and go to state 11
    TRUE            shift and go to state 12
    FALSE           shift and go to state 13

    formula                        shift and go to state 38
    atomicFormula                  shift and go to state 2
    expression                     shift and go to state 8
    term                           shift and go to state 9

state 15

    (4) formula -> formula IMPLIES . formula
    (1) formula -> . atomicFormula
    (2) formula -> . LBRACKET formula RBRACKET
    (3) formula -> . formula IFF formula
    (4) formula -> . formula IMPLIES formula
    (5) formula -> . formula OR formula
    (6) formula -> . formula AND formula
    (7) formula -> . NOT formula
    (10) formula -> . FORALL quantifierList LBRACKET formula RBRACKET
    (11) formula -> . THEREEXISTS quantifierList LBRACKET formula RBRACKET
    (12) atomicFormula -> . IDENTIFIER LBRACKET termList RBRACKET
    (13) atomicFormula -> . expression EQ expression
    (14) atomicFormula -> . expression EQ term
    (15) atomicFormula -> . term EQ expression
    (16) atomicFormula -> . term EQ term
    (19) atomicFormula -> . expression LT expression
    (20) atomicFormula -> . expression LT term
    (21) atomicFormula -> . term LT expression
    (22) atomicFormula -> . term LT term
    (23) atomicFormula -> . expression LTE expression
    (24) atomicFormula -> . expression LTE term
    (25) atomicFormula -> . term LTE expression
    (26) atomicFormula -> . term LTE term
    (27) atomicFormula -> . expression GT expression
    (28) atomicFormula -> . expression GT term
    (29) atomicFormula -> . term GT expression
    (30) atomicFormula -> . term GT term
    (31) atomicFormula -> . expression GTE expression
    (32) atomicFormula -> . expression GTE term
    (33) atomicFormula -> . term GTE expression
    (34) atomicFormula -> . term GTE term
    (35) atomicFormula -> . expression NEQ expression
    (36) atomicFormula -> . expression NEQ term
    (37) atomicFormula -> . term NEQ expression
    (38) atomicFormula -> . term NEQ term
    (17) expression -> . expression PLUS term
    (18) expression -> . term PLUS term
    (41) term -> . CONSTANT
    (42) term -> . IDENTIFIER
    (43) term -> . STRINGLIT
    (44) term -> . TRUE
    (45) term -> . FALSE

    LBRACKET        shift and go to state 3
    NOT             shift and go to state 4
    FORALL          shift and go to state 5
    THEREEXISTS     shift and go to state 6
    IDENTIFIER      shift and go to state 7
    CONSTANT        shift and go to state 10
    STRINGLIT       shift and go to state 11
    TRUE            shift and go to state 12
    FALSE           shift and go to state 13

    formula                        shift and go to state 39
    atomicFormula                  shift and go to state 2
    expression                     shift and go to state 8
    term                           shift and go to state 9

state 16

    (5) formula -> formula OR . formula
    (1) formula -> . atomicFormula
    (2) formula -> . LBRACKET formula RBRACKET
    (3) formula -> . formula IFF formula
    (4) formula -> . formula IMPLIES formula
    (5) formula -> . formula OR formula
    (6) formula -> . formula AND formula
    (7) formula -> . NOT formula
    (10) formula -> . FORALL quantifierList LBRACKET formula RBRACKET
    (11) formula -> . THEREEXISTS quantifierList LBRACKET formula RBRACKET
    (12) atomicFormula -> . IDENTIFIER LBRACKET termList RBRACKET
    (13) atomicFormula -> . expression EQ expression
    (14) atomicFormula -> . expression EQ term
    (15) atomicFormula -> . term EQ expression
    (16) atomicFormula -> . term EQ term
    (19) atomicFormula -> . expression LT expression
    (20) atomicFormula -> . expression LT term
    (21) atomicFormula -> . term LT expression
    (22) atomicFormula -> . term LT term
    (23) atomicFormula -> . expression LTE expression
    (24) atomicFormula -> . expression LTE term
    (25) atomicFormula -> . term LTE expression
    (26) atomicFormula -> . term LTE term
    (27) atomicFormula -> . expression GT expression
    (28) atomicFormula -> . expression GT term
    (29) atomicFormula -> . term GT expression
    (30) atomicFormula -> . term GT term
    (31) atomicFormula -> . expression GTE expression
    (32) atomicFormula -> . expression GTE term
    (33) atomicFormula -> . term GTE expression
    (34) atomicFormula -> . term GTE term
    (35) atomicFormula -> . expression NEQ expression
    (36) atomicFormula -> . expression NEQ term
    (37) atomicFormula -> . term NEQ expression
    (38) atomicFormula -> . term NEQ term
    (17) expression -> . expression PLUS term
    (18) expression -> . term PLUS term
    (41) term -> . CONSTANT
    (42) term -> . IDENTIFIER
    (43) term -> . STRINGLIT
    (44) term -> . TRUE
    (45) term -> . FALSE

    LBRACKET        shift and go to state 3
    NOT             shift and go to state 4
    FORALL          shift and go to state 5
    THEREEXISTS     shift and go to state 6
    IDENTIFIER      shift and go to state 7
    CONSTANT        shift and go to state 10
    STRINGLIT       shift and go to state 11
    TRUE            shift and go to state 12
    FALSE           shift and go to state 13

    formula                        shift and go to state 40
    atomicFormula                  shift and go to state 2
    expression                     shift and go to state 8
    term                           shift and go to state 9

state 17
